--- a/AstonTech.AstonEngineer.Web/MasterPages/Site2Column.Master
+++ b/AstonTech.AstonEngineer.Web/MasterPages/Site2Column.Master
@@ -5,6 +5,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title></title>
+    <script type="text/javascript" src="../Scripts/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="../Scripts/jquery-ui-1.11.4.min.js"></script>
+
+    <link rel="stylesheet" href="../App_Themes/Main/jquery-ui-1.9.2.custom.min.css" />
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
